--- a/2026/_layouts/default.html
+++ b/2026/_layouts/default.html
@@ -124,7 +124,7 @@
             <li role="menuitem"><a href="https://tedxbreckenridge.com/speak" target="_blank" rel="noopener noreferrer" aria-label="Apply to Speak (opens in new window)">Apply to Speak</a></li>
             <li role="menuitem"><a href="https://tedxbreckenridge.com/volunteer" target="_blank" rel="noopener noreferrer" aria-label="Volunteer (opens in new window)">Volunteer</a></li>
             <li role="menuitem"><a href="https://tedxbreckenridge.com/sponsor" target="_blank" rel="noopener noreferrer" aria-label="Sponsor (opens in new window)">Sponsor</a></li>
-            <li role="menuitem"><a href="https://tedxbreckenridge.com/donate" target="_blank" rel="noopener noreferrer" aria-label="Donate (opens in new window)">Donate</a></li>
+            <li role="menuitem"><a href="/donate-local-nonprofit-in-breckenridge">Donate</a></li>
           </ul>
         </li>
         <li class="nav-dropdown">
@@ -248,7 +248,7 @@
         <div class="footer-column">
           <h4>Support</h4>
           <ul>
-            <li><a href="/donate">Donate</a></li>
+            <li><a href="/donate-local-nonprofit-in-breckenridge">Donate</a></li>
             <li><a href="/volunteer">Volunteer</a></li>
             <li><a href="/sponsor">Sponsor</a></li>
             <li><a href="/shop">Shop</a></li>
