Add a volunteer page.

--- a/2026/_layouts/default.html
+++ b/2026/_layouts/default.html
@@ -122,7 +122,7 @@
           <button class="nav-dropdown-toggle" aria-expanded="false" aria-haspopup="true">Support</button>
           <ul class="nav-dropdown-menu" role="menu">
             <li role="menuitem"><a href="https://tedxbreckenridge.com/speak" target="_blank" rel="noopener noreferrer" aria-label="Apply to Speak (opens in new window)">Apply to Speak</a></li>
-            <li role="menuitem"><a href="https://tedxbreckenridge.com/volunteer" target="_blank" rel="noopener noreferrer" aria-label="Volunteer (opens in new window)">Volunteer</a></li>
+            <li role="menuitem"><a href="/volunteer">Volunteer</a></li>
             <li role="menuitem"><a href="https://tedxbreckenridge.com/sponsor" target="_blank" rel="noopener noreferrer" aria-label="Sponsor (opens in new window)">Sponsor</a></li>
             <li role="menuitem"><a href="/donate-local-nonprofit-in-breckenridge">Donate</a></li>
           </ul>
