Add an Apply to Speak page.

--- a/2026/_layouts/default.html
+++ b/2026/_layouts/default.html
@@ -121,7 +121,7 @@
         <li class="nav-dropdown">
           <button class="nav-dropdown-toggle" aria-expanded="false" aria-haspopup="true">Support</button>
           <ul class="nav-dropdown-menu" role="menu">
-            <li role="menuitem"><a href="https://tedxbreckenridge.com/speak" target="_blank" rel="noopener noreferrer" aria-label="Apply to Speak (opens in new window)">Apply to Speak</a></li>
+            <li role="menuitem"><a href="/speak">Apply to Speak</a></li>
             <li role="menuitem"><a href="/volunteer">Volunteer</a></li>
             <li role="menuitem"><a href="https://tedxbreckenridge.com/sponsor" target="_blank" rel="noopener noreferrer" aria-label="Sponsor (opens in new window)">Sponsor</a></li>
             <li role="menuitem"><a href="/donate-local-nonprofit-in-breckenridge">Donate</a></li>
