--- a/2026/_layouts/default.html
+++ b/2026/_layouts/default.html
@@ -123,7 +123,7 @@
           <ul class="nav-dropdown-menu" role="menu">
             <li role="menuitem"><a href="/speak">Apply to Speak</a></li>
             <li role="menuitem"><a href="/volunteer">Volunteer</a></li>
-            <li role="menuitem"><a href="https://tedxbreckenridge.com/sponsor" target="_blank" rel="noopener noreferrer" aria-label="Sponsor (opens in new window)">Sponsor</a></li>
+            <li role="menuitem"><a href="/sponsor">Sponsor</a></li>
             <li role="menuitem"><a href="/donate-local-nonprofit-in-breckenridge">Donate</a></li>
           </ul>
         </li>
