--- a/website/_layouts/default.html
+++ b/website/_layouts/default.html
@@ -109,31 +109,31 @@
           <ul class="nav-dropdown-menu" role="menu">
             <li role="menuitem"><a href="/#salon">January Salon Event</a></li>
             <li role="menuitem"><a href="/#main-event">October 2026 Main Event</a></li>
-            <li role="menuitem"><a href="/faq">FAQ</a></li>
+            <li role="menuitem"><a href="/faq/">FAQ</a></li>
           </ul>
         </li>
         <li class="nav-dropdown">
           <button class="nav-dropdown-toggle" aria-expanded="false" aria-haspopup="true">Watch</button>
           <ul class="nav-dropdown-menu" role="menu">
-            <li role="menuitem"><a href="/talks">All Talks</a></li>
+            <li role="menuitem"><a href="/talks/">All Talks</a></li>
           </ul>
         </li>
         <li class="nav-dropdown">
           <button class="nav-dropdown-toggle" aria-expanded="false" aria-haspopup="true">Support</button>
           <ul class="nav-dropdown-menu" role="menu">
-            <li role="menuitem"><a href="/speak">Apply to Speak</a></li>
-            <li role="menuitem"><a href="/volunteer">Volunteer</a></li>
-            <li role="menuitem"><a href="/sponsor">Sponsor</a></li>
-            <li role="menuitem"><a href="/donate-local-nonprofit-in-breckenridge">Donate</a></li>
+            <li role="menuitem"><a href="/speak/">Apply to Speak</a></li>
+            <li role="menuitem"><a href="/volunteer/">Volunteer</a></li>
+            <li role="menuitem"><a href="/sponsor/">Sponsor</a></li>
+            <li role="menuitem"><a href="/donate-local-nonprofit-in-breckenridge/">Donate</a></li>
           </ul>
         </li>
         <li class="nav-dropdown">
           <button class="nav-dropdown-toggle" aria-expanded="false" aria-haspopup="true">Discover</button>
           <ul class="nav-dropdown-menu" role="menu">
-            <li role="menuitem"><a href="/about">About</a></li>
-            <li role="menuitem"><a href="/team">Team</a></li>
-            <li role="menuitem"><a href="/blog">Blog</a></li>
-            <li role="menuitem"><a href="/contact">Contact</a></li>
+            <li role="menuitem"><a href="/about/">About</a></li>
+            <li role="menuitem"><a href="/team/">Team</a></li>
+            <li role="menuitem"><a href="/blog/">Blog</a></li>
+            <li role="menuitem"><a href="/contact/">Contact</a></li>
           </ul>
         </li>
       </ul>
@@ -265,28 +265,28 @@
         <div class="footer-column">
           <h4>Attend</h4>
           <ul>
-            <li><a href="/tickets">Get Tickets</a></li>
-            <li><a href="/speakers">2026 Speakers</a></li>
-            <li><a href="/salons">Salon Series</a></li>
-            <li><a href="/faq">FAQ</a></li>
+            <li><a href="/tickets/">Get Tickets</a></li>
+            <li><a href="/speakers/">2026 Speakers</a></li>
+            <li><a href="/salons/">Salon Series</a></li>
+            <li><a href="/faq/">FAQ</a></li>
           </ul>
         </div>
         <div class="footer-column">
           <h4>Support</h4>
           <ul>
-            <li><a href="/donate-local-nonprofit-in-breckenridge">Donate</a></li>
-            <li><a href="/volunteer">Volunteer</a></li>
-            <li><a href="/sponsor">Sponsor</a></li>
-            <li><a href="/shop">Shop</a></li>
+            <li><a href="/donate-local-nonprofit-in-breckenridge/">Donate</a></li>
+            <li><a href="/volunteer/">Volunteer</a></li>
+            <li><a href="/sponsor/">Sponsor</a></li>
+            <li><a href="/shop/">Shop</a></li>
           </ul>
         </div>
         <div class="footer-column">
           <h4>Discover</h4>
           <ul>
-            <li><a href="/talks">Watch Talks</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/team">Team</a></li>
-            <li><a href="/contact">Contact</a></li>
+            <li><a href="/talks/">Watch Talks</a></li>
+            <li><a href="/about/">About</a></li>
+            <li><a href="/team/">Team</a></li>
+            <li><a href="/contact/">Contact</a></li>
           </ul>
         </div>
       </div>
